Added Counting Post ID

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -54,7 +54,7 @@
                 <p class="lead">
                     <%= posts[i]?.DateTime %>
                 </p>
-                <a class="btn btn-lg btn-primary" role="button">Edit now &raquo;</a>
+                <a class="btn btn-lg btn-primary" role="button">Delete &raquo;</a>
             </div>
         </main>
         <% } %>
