--- a/views/list.ejs
+++ b/views/list.ejs
@@ -41,9 +41,9 @@
             </div>
         </div>
     </nav>
+    <ul class="list-group">
+        <% for (var i=posts.length - 1; i>= 0; i--) { %>
 
-    <% for (var i=posts.length - 1; i>= 0; i--) { %>
-        <ul class="list-group">
             <li class="list-group-item">
                 <h2>
                     <%= posts[i]?.title %>
@@ -51,24 +51,40 @@
                 <p class="lead">
                     <%= posts[i]?.DateTime %>
                 </p>
-                <button class="btn btn-danger">Delete</button>
+                <button class="btn btn-danger delete" data-id="<%= posts[i]?._id %>">Delete</button>
             </li>
-        </ul>
-        <% } %>
 
-            <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+            <% } %>
+    </ul>
 
-            <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script>
+        $(".delete").click((e) => {
+            var thisForm = $(e.target);
+            let postId = e.target.dataset.id;
+            $.ajax({
+                method: "DELETE",
+                url: "/delete",
+                data: { _id: postId }
+            }).done((result) => {
+                thisForm?.parent("li")?.fadeOut();
+            }).fail(() => {
+                alert("이미 삭제된 글입니다");
+            });
+        });
+    </script>
 
-            <!-- Optional JavaScript; choose one of the two! -->
+    <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
 
-            <!-- Option 1: Bootstrap Bundle with Popper -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                crossorigin="anonymous"></script>
+    <!-- Optional JavaScript; choose one of the two! -->
 
-            <!-- Option 2: Separate Popper and Bootstrap JS -->
-            <!--
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
